--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -206,7 +206,7 @@ K2Node=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.
 K2Node_Tunnel=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 CameraComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 K2Node_EnhancedInputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
-EdGraph=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
+EdGraph=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 ArrowComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_PistolProjectile_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_SG_Projectile_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
@@ -217,7 +217,7 @@ BP_DoorLocket_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.
 BP_DoorLocket_2_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup
 K2Node_FunctionEntry=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 BillboardComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
-K2Node_Variable=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
+K2Node_Variable=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 key1_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 key1_2_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 Bandige_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
@@ -232,13 +232,13 @@ Shotgun_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappin
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
