--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -234,38 +234,36 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=DataTableEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
-OpenAssetsAtExit=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Medkit.Medkit
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -280,7 +278,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Weapons
+ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -340,36 +338,36 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Medkit
-MRUItem1=/Game/_Core/_Player/DI_Player
-MRUItem2=/Game/_Core/_Player/IF_Character
-MRUItem3=/Game/_Core/_Player/_INV_System/Inventory_Struct
-MRUItem4=/Game/_Core/_Player/_INV_System/INF_DT
-MRUItem5=/Game/_Core/_Player/_INV_System/Invetory
-MRUItem6=/Game/_Level/_LevelAssets/_Environment_Assets/Door/BP_DoorLocket_2
-MRUItem7=/Game/_PlaceHolderts/BP_DoorLocket_2
-MRUItem8=/Game/_Level/_LevelAssets/_Environment_Assets/InteractionSyst/Interact_IF
-MRUItem9=/Game/_Level/_LevelAssets/_Environment_Assets/Door/BP_DoorLocket
-MRUItem10=/Game/_Core/_Player/_INV_System/_Items/keys/key1_2
-MRUItem11=/Game/_Core/_Player/_INV_System/_Items/keys/key1
-MRUItem12=/Game/_Core/_Player/_INV_System/_Items/MedicalItams/Bandige
-MRUItem13=/Game/_Core/_Player/_INV_System/_Items/keys/Master_Key
-MRUItem14=/Game/_Core/Libraries/BP_FunctionLib
-MRUItem15=/Game/_Level/_LevelAssets/_Environment_Assets/Door/BP_Door
-MRUItem16=/Game/_Level/_LevelAssets/_Props/_Furniture/Carpet3
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Furniture/Carpet2
-MRUItem18=/Game/_Level/_LevelAssets/_Props/_Furniture/Towel1
-MRUItem19=/Game/_Level/_LevelAssets/_Props/_Furniture/Vase1
-MRUItem20=/Game/_Level/_LevelAssets/_Props/_Outside/Carpet3_M
-MRUItem21=/Game/_Level/_LevelAssets/_Props/_Outside/Carpet2_M
-MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Towel_Mat
-MRUItem23=/Game/_Level/_LevelAssets/_Props/_Materials/Vase1_Mat
-MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/Bench_M
-MRUItem25=/Game/_Level/_LevelAssets/_Props/_Furniture/Bench_SM
-MRUItem26=/Game/_Level/_LevelAssets/_Props/_Furniture/Carpet_SM
-MRUItem27=/Game/_Core/_Weapons/AmmoToSpawn/NewAmmo/BP_SG_Projectile
-MRUItem28=/Game/_Core/_Weapons/AmmoToSpawn/BullitAr
-MRUItem29=/Game/_Core/_Enemies/BP_Kronen
+MRUItem0=/Game/_Level/_LevelAssets/_Props/_Materials/photos/agu_aykan_2
+MRUItem1=/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture
+MRUItem2=/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger
+MRUItem3=/Game/_Core/_Enemies/_Charger/Moose_Tent_DM
+MRUItem4=/Game/_Core/_Enemies/_Charger/Moose_Body_DM
+MRUItem5=/Game/_Core/_Enemies/_Charger/Moose_Antler_DM
+MRUItem6=/Game/_Core/_Enemies/Kronen_Male/Textures/Kronen_Male_003/Kronen_Textures_M_03
+MRUItem7=/Game/_Core/_Enemies/Kronen_Male/Textures/Kronen_Male_002/Kronen_Textures_M_02
+MRUItem8=/Game/_Core/_Enemies/Kronen_Male/Kronen_Textures_M_01
+MRUItem9=/Game/_Core/_Enemies/Kronen_Fast/Texturs/Kronen_Fast_003/Kronen_Textures_Fast_03
+MRUItem10=/Game/_Core/_Enemies/Kronen_Fast/Texturs/Kronen_Fast_002/Kronen_Textures_Fast_02
+MRUItem11=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Textures_Fast_01
+MRUItem12=/Game/_Core/_Enemies/Kronen_Female/Textures/Kronen_Female_003/Kronen_Textures_F_03
+MRUItem13=/Game/_Core/_Enemies/Kronen_Female/Textures/Kronen_Female_002/Kronen_Textures_F_02
+MRUItem14=/Game/_Core/_Enemies/Kronen_Female/Kronen_Textures_01_WIP3
+MRUItem15=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_DM
+MRUItem16=/Game/_Core/_Enemies/Creature/Creature_Alpha
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/woodenBoard_DM
+MRUItem18=/Game/_Level/_LevelAssets/_Props/_Materials/whiski_2
+MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/Wall_Plaster_Texture
+MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/photos/1_2
+MRUItem21=/Game/_Level/_LevelAssets/_Props/_Materials/Vase2
+MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Tree_DM
+MRUItem23=/Game/_Level/_LevelAssets/_Props/_Materials/Tree_AM
+MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture
+MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/towel_rack2
+MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/Towel1_Textures
+MRUItem27=/Game/_Level/_LevelAssets/_Props/_Materials/StreetLamp_Branch
+MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/StreetLamp_Base_DM
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Materials/Stove_Counter_Texture
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -379,6 +377,7 @@ DI_Player_C.Tick=True
 DI_Player_C.Widgets=True
 DI_Player_C.ComponentTick=True
 DI_Player_C.Player Variables=True
+DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
@@ -1474,7 +1473,7 @@ WorldSettings.Tick=True
 WorldSettings.Networking=True
 Inventory_Struct.None=True
 UserDefinedStruct.Structure=True
-DI_Player_C.Weapon Info =True
+Texture2D.Interchange =True
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Core/_Weapons/Shotgun.Shotgun;
@@ -1604,6 +1603,84 @@ DeleteConfirmationVariable_Warning=False
 /Game/_Level/_LevelAssets/_Environment_Assets/Door/BP_DoorLocket_2.BP_DoorLocket_2=1
 /Game/_Core/_Player/_INV_System/INF_DT.INF_DT=0
 /Game/_Core/_Player/_INV_System/Inventory_Struct.Inventory_Struct=0
+/Game/_Level/_LevelAssets/_Props/_Materials/Bench_DM.Bench_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Black_Metal_Texture.Black_Metal_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Board_DM.Board_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/book_textures.book_textures=1
+/Game/_Level/_LevelAssets/_Props/_Materials/cardboardBox_DM.cardboardBox_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Carpet_DM.Carpet_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/cereal1.cereal1=1
+/Game/_Level/_LevelAssets/_Props/_Materials/corn_flake_box.corn_flake_box=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Clothes_Hanger1_Textures.Clothes_Hanger1_Textures=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Clothes_Hanger2_Textures.Clothes_Hanger2_Textures=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Corpse1_Texture.Corpse1_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Corpse2_Texture.Corpse2_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Corpse3_Texture.Corpse3_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/photos/3.3=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Corpse4_Texture.Corpse4_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Corpse5_Texture.Corpse5_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Corpse6_Texture.Corpse6_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Corpse_Parts_Textures.Corpse_Parts_Textures=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Couch_DM.Couch_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Counter_Sink_Texture.Counter_Sink_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Countertop_Marble_Texture.Countertop_Marble_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Countertop_Texture.Countertop_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/curtain_2.curtain_2=1
+/Game/_Level/_LevelAssets/_Props/_Materials/desk_and_table_2.desk_and_table_2=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Dish_Retainer_Texture.Dish_Retainer_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Dishes1_Textures.Dishes1_Textures=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Door_Mat1_Textures.Door_Mat1_Textures=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Door_Mat2_Textures.Door_Mat2_Textures=1
+/Game/_Level/_LevelAssets/_Props/_Materials/FireHydrant_texture.FireHydrant_texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Frame_DM.Frame_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/frame_texture_2.frame_texture_2=1
+/Game/_Level/_LevelAssets/_Props/_Materials/photos/1_2.1_2=1
+/Game/_Level/_LevelAssets/_Props/_Materials/photos/agu_aykan_2.agu_aykan_2=1
+/Game/_Level/_LevelAssets/_Props/_Materials/photos/agu_aykan_3.agu_aykan_3=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Ice_Machine1_Texture.Ice_Machine1_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Ice_Machine2_Texture.Ice_Machine2_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/jukebox_ncl1_1.jukebox_ncl1_1=1
+/Game/_Level/_LevelAssets/_Props/_Materials/lamp.lamp=1
+/Game/_Level/_LevelAssets/_Props/_Materials/photos/le_monke_DM.le_monke_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Media_Center_Stuff1_Textures.Media_Center_Stuff1_Textures=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Media_Center_Wood_Textures.Media_Center_Wood_Textures=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Microwave_Texture.Microwave_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser1_Texture.Newspaper_Dispenser1_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser2_Texture.Newspaper_Dispenser2_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser3_Texture.Newspaper_Dispenser3_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/organs.organs=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Planks_DM.Planks_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/plate_ncl1_1.plate_ncl1_1=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Playground1_DM.Playground1_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Playground2_DM.Playground2_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Playground3_DM.Playground3_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Shoe_Rack_Textures.Shoe_Rack_Textures=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Stove_Counter_Texture.Stove_Counter_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/StreetLamp_Base_DM.StreetLamp_Base_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/StreetLamp_Branch.StreetLamp_Branch=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Towel1_Textures.Towel1_Textures=1
+/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture.TrashCan_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Tree_AM.Tree_AM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Tree_DM.Tree_DM=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Vase2.Vase2=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Wall_Plaster_Texture.Wall_Plaster_Texture=1
+/Game/_Level/_LevelAssets/_Props/_Materials/whiski_2.whiski_2=1
+/Game/_Level/_LevelAssets/_Props/_Materials/woodenBoard_DM.woodenBoard_DM=1
+/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_DM.Kronen_Bulk_DM=1
+/Game/_Core/_Enemies/Kronen_Female/Kronen_Textures_01_WIP3.Kronen_Textures_01_WIP3=1
+/Game/_Core/_Enemies/Kronen_Female/Textures/Kronen_Female_002/Kronen_Textures_F_02.Kronen_Textures_F_02=1
+/Game/_Core/_Enemies/Kronen_Female/Textures/Kronen_Female_003/Kronen_Textures_F_03.Kronen_Textures_F_03=1
+/Game/_Core/_Enemies/Kronen_Fast/Kronen_Textures_Fast_01.Kronen_Textures_Fast_01=1
+/Game/_Core/_Enemies/Kronen_Fast/Texturs/Kronen_Fast_002/Kronen_Textures_Fast_02.Kronen_Textures_Fast_02=1
+/Game/_Core/_Enemies/Kronen_Fast/Texturs/Kronen_Fast_003/Kronen_Textures_Fast_03.Kronen_Textures_Fast_03=1
+/Game/_Core/_Enemies/Kronen_Male/Kronen_Textures_M_01.Kronen_Textures_M_01=1
+/Game/_Core/_Enemies/Kronen_Male/Textures/Kronen_Male_002/Kronen_Textures_M_02.Kronen_Textures_M_02=1
+/Game/_Core/_Enemies/Kronen_Male/Textures/Kronen_Male_003/Kronen_Textures_M_03.Kronen_Textures_M_03=1
+/Game/_Core/_Enemies/_Charger/Moose_Antler_DM.Moose_Antler_DM=1
+/Game/_Core/_Enemies/_Charger/Moose_Body_DM.Moose_Body_DM=1
+/Game/_Core/_Enemies/_Charger/Moose_Tent_DM.Moose_Tent_DM=1
+/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger.Slugger=1
+/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture.SluggerTexture=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1688,6 +1765,7 @@ MeshStatisticsProperties.MeshStatistics=True
 MeshElementsVisualizerProperties.MeshElementVisualization=True
 StaticMeshComponent.Physics=False
 ProjectileMovementComponent.ProjectileBounces=True
+Texture2D.LevelOfDetail=False
 
 [RootWindow]
 ScreenPosition=X=105.000 Y=0.000
@@ -2807,8 +2885,8 @@ DataTableEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [SelectionDetails]
