--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -234,13 +234,13 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
@@ -278,7 +278,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Outside
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -338,36 +338,36 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Props/_Materials/photos/agu_aykan_2
-MRUItem1=/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture
-MRUItem2=/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger
-MRUItem3=/Game/_Core/_Enemies/_Charger/Moose_Tent_DM
-MRUItem4=/Game/_Core/_Enemies/_Charger/Moose_Body_DM
-MRUItem5=/Game/_Core/_Enemies/_Charger/Moose_Antler_DM
-MRUItem6=/Game/_Core/_Enemies/Kronen_Male/Textures/Kronen_Male_003/Kronen_Textures_M_03
-MRUItem7=/Game/_Core/_Enemies/Kronen_Male/Textures/Kronen_Male_002/Kronen_Textures_M_02
-MRUItem8=/Game/_Core/_Enemies/Kronen_Male/Kronen_Textures_M_01
-MRUItem9=/Game/_Core/_Enemies/Kronen_Fast/Texturs/Kronen_Fast_003/Kronen_Textures_Fast_03
-MRUItem10=/Game/_Core/_Enemies/Kronen_Fast/Texturs/Kronen_Fast_002/Kronen_Textures_Fast_02
-MRUItem11=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Textures_Fast_01
-MRUItem12=/Game/_Core/_Enemies/Kronen_Female/Textures/Kronen_Female_003/Kronen_Textures_F_03
-MRUItem13=/Game/_Core/_Enemies/Kronen_Female/Textures/Kronen_Female_002/Kronen_Textures_F_02
-MRUItem14=/Game/_Core/_Enemies/Kronen_Female/Kronen_Textures_01_WIP3
-MRUItem15=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_DM
-MRUItem16=/Game/_Core/_Enemies/Creature/Creature_Alpha
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/woodenBoard_DM
-MRUItem18=/Game/_Level/_LevelAssets/_Props/_Materials/whiski_2
-MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/Wall_Plaster_Texture
-MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/photos/1_2
-MRUItem21=/Game/_Level/_LevelAssets/_Props/_Materials/Vase2
-MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Tree_DM
-MRUItem23=/Game/_Level/_LevelAssets/_Props/_Materials/Tree_AM
-MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture
-MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/towel_rack2
-MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/Towel1_Textures
-MRUItem27=/Game/_Level/_LevelAssets/_Props/_Materials/StreetLamp_Branch
-MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/StreetLamp_Base_DM
-MRUItem29=/Game/_Level/_LevelAssets/_Props/_Materials/Stove_Counter_Texture
+MRUItem0=/Game/_Level/_LevelAssets/_Props/_Outside/Playground_SM
+MRUItem1=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture
+MRUItem2=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture_Mat
+MRUItem3=/Game/_Level/_LevelAssets/_Props/_Outside/Trashcan
+MRUItem4=/Game/_Level/_LevelAssets/_Props/_Materials/photos/agu_aykan_2
+MRUItem5=/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture
+MRUItem6=/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger
+MRUItem7=/Game/_Core/_Enemies/_Charger/Moose_Tent_DM
+MRUItem8=/Game/_Core/_Enemies/_Charger/Moose_Body_DM
+MRUItem9=/Game/_Core/_Enemies/_Charger/Moose_Antler_DM
+MRUItem10=/Game/_Core/_Enemies/Kronen_Male/Textures/Kronen_Male_003/Kronen_Textures_M_03
+MRUItem11=/Game/_Core/_Enemies/Kronen_Male/Textures/Kronen_Male_002/Kronen_Textures_M_02
+MRUItem12=/Game/_Core/_Enemies/Kronen_Male/Kronen_Textures_M_01
+MRUItem13=/Game/_Core/_Enemies/Kronen_Fast/Texturs/Kronen_Fast_003/Kronen_Textures_Fast_03
+MRUItem14=/Game/_Core/_Enemies/Kronen_Fast/Texturs/Kronen_Fast_002/Kronen_Textures_Fast_02
+MRUItem15=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Textures_Fast_01
+MRUItem16=/Game/_Core/_Enemies/Kronen_Female/Textures/Kronen_Female_003/Kronen_Textures_F_03
+MRUItem17=/Game/_Core/_Enemies/Kronen_Female/Textures/Kronen_Female_002/Kronen_Textures_F_02
+MRUItem18=/Game/_Core/_Enemies/Kronen_Female/Kronen_Textures_01_WIP3
+MRUItem19=/Game/_Core/_Enemies/Kronen_Bulky/Kronen_Bulk_DM
+MRUItem20=/Game/_Core/_Enemies/Creature/Creature_Alpha
+MRUItem21=/Game/_Level/_LevelAssets/_Props/_Materials/woodenBoard_DM
+MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/whiski_2
+MRUItem23=/Game/_Level/_LevelAssets/_Props/_Materials/Wall_Plaster_Texture
+MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/photos/1_2
+MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/Vase2
+MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/Tree_DM
+MRUItem27=/Game/_Level/_LevelAssets/_Props/_Materials/Tree_AM
+MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/towel_rack2
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Materials/Towel1_Textures
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -1181,6 +1181,7 @@ Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -1786,7 +1787,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../Projects/The_Influence/DeepInfection/Content/_Level
+UNR=C:/Users/EmperorMinilla/Desktop/Deep Infection/The_Influence/DeepInfection/Content/_Level
 BRUSH=../../../../Projects/The_Influence/DeepInfection/Content/
 FBX=../../../../Projects/The_Influence/DeepInfection/Content/
 FBXAnim=../../../../Projects/The_Influence/DeepInfection/Content/
@@ -2896,7 +2897,6 @@ PreserveScaleRatio=True
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
@@ -3191,7 +3191,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
