--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -227,6 +227,7 @@ WGP_IF_ItemMenu_C=InputMappingContext.Mappings.ActionMappings,InputMappingContex
 K2Node_CustomEvent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 Axe_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup
 Shotgun_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup
+BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 
 [EditorStartup]
 LastLevel=/Game/_Level/Island
@@ -234,6 +235,20 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -250,20 +265,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -278,7 +279,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Furniture
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Kronen_Male
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -338,36 +339,36 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Props/_Materials/Media_Center_Wood_Mat
-MRUItem1=/Game/_Level/_LevelAssets/_OGFiles/DustyWood_M
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Materials/Shoe_Rack_M
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_Furniture/Vase1
-MRUItem4=/Game/_Level/_LevelAssets/_Props/Bodies/Head_Part
-MRUItem5=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall2
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall1
-MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse_Parts_Textures
-MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse_Parts
-MRUItem9=/Game/_Level/_LevelAssets/_Props/Bodies/Leg_Part
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse2_Texture
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse2_Mat
-MRUItem12=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayDown1
-MRUItem13=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayUp2
-MRUItem14=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayDown2
-MRUItem15=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayUp1
-MRUItem16=/Game/_Level/_LevelAssets/_Props/_Outside/Playground_SM
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture
-MRUItem18=/Game/_Level/_LevelAssets/_Props/_Materials/TrashCan_Texture_Mat
-MRUItem19=/Game/_Level/_LevelAssets/_Props/_Outside/Trashcan
-MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/photos/agu_aykan_2
-MRUItem21=/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture
-MRUItem22=/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger
-MRUItem23=/Game/_Core/_Enemies/_Charger/Moose_Tent_DM
-MRUItem24=/Game/_Core/_Enemies/_Charger/Moose_Body_DM
-MRUItem25=/Game/_Core/_Enemies/_Charger/Moose_Antler_DM
-MRUItem26=/Game/_Core/_Enemies/Kronen_Male/Textures/Kronen_Male_003/Kronen_Textures_M_03
-MRUItem27=/Game/_Core/_Enemies/Kronen_Male/Textures/Kronen_Male_002/Kronen_Textures_M_02
-MRUItem28=/Game/_Core/_Enemies/Kronen_Male/Kronen_Textures_M_01
-MRUItem29=/Game/_Core/_Enemies/Kronen_Fast/Texturs/Kronen_Fast_003/Kronen_Textures_Fast_03
+MRUItem0=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
+MRUItem1=/Game/_Core/_Enemies/Kronen_Male/Kronen_Animations_Death1
+MRUItem2=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Idle1
+MRUItem3=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Walk1
+MRUItem4=/Game/_Core/_Enemies/Kronen_Female/Kronen_Model_02
+MRUItem5=/Game/_Core/_Enemies/Kronen_Female/Kronen_Textures_01_WIP3
+MRUItem6=/Game/_Core/_Enemies/Kronen_Female/Kronen_Fem1
+MRUItem7=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Death1
+MRUItem8=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Death1
+MRUItem9=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1_Armature_M_004_Armature_M_005Action_001
+MRUItem10=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1
+MRUItem11=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1
+MRUItem12=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model
+MRUItem13=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model_Skeleton
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Media_Center_Wood_Mat
+MRUItem15=/Game/_Level/_LevelAssets/_OGFiles/DustyWood_M
+MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Shoe_Rack_M
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Furniture/Vase1
+MRUItem18=/Game/_Level/_LevelAssets/_Props/Bodies/Head_Part
+MRUItem19=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall2
+MRUItem20=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall1
+MRUItem21=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse_Parts_Textures
+MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse_Parts
+MRUItem23=/Game/_Level/_LevelAssets/_Props/Bodies/Leg_Part
+MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse2_Texture
+MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse2_Mat
+MRUItem26=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayDown1
+MRUItem27=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayUp2
+MRUItem28=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayDown2
+MRUItem29=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayUp1
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -1539,6 +1540,10 @@ SkeletalMeshActor.Networking=True
 SkeletalMeshActor.Input=True
 SkeletalMeshActor.Actor=True
 MaterialExpressionReroute.MaterialExpression=True
+BoneProxy.Bone=True
+BoneProxy.Transforms=True
+ClothingAssetCommon.Config=True
+ClothingAssetCommon.Import=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Core/_Enemies/Kronen_Male/Kronen_Model_01.Kronen_Model_01;
@@ -1752,6 +1757,19 @@ DeleteConfirmationVariable_Warning=False
 /Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall1.Coat_Hanger_Wall1=1
 /Game/_Level/_LevelAssets/_Props/_Furniture/Vase1.Vase1=1
 /Game/_Level/_LevelAssets/_Props/_Materials/Media_Center_Wood_Mat.Media_Center_Wood_Mat=1
+/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1.KronenFast_Animations_Idle1=1
+/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model_Skeleton.Kronen_Fast_Model_Skeleton=1
+/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model.Kronen_Fast_Model=1
+/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1.KronenFast_Animations_Walk1=1
+/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1_Armature_M_004_Armature_M_005Action_001.KronenFast_Animations_Attack1_Armature_M_004_Armature_M_005Action_001=1
+/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Death1.KronenFast_Animations_Death1=1
+/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Death1.KronenFemale_Animations_Death1=1
+/Game/_Core/_Enemies/Kronen_Female/Kronen_Fem1.Kronen_Fem1=1
+/Game/_Core/_Enemies/Kronen_Female/Kronen_Model_02.Kronen_Model_02=1
+/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Walk1.KronenFemale_Animations_Walk1=1
+/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Idle1.KronenFemale_Animations_Idle1=1
+/Game/_Core/_Enemies/Kronen_Male/Kronen_Animations_Death1.Kronen_Animations_Death1=1
+/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1.KronenMale_Animations_Attack1=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1806,7 +1824,7 @@ GraphEditorQuickJumps=()
 [DetailPropertyExpansion]
 InputAction=
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.SkeletalMeshes\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[22]\" \"Object.Mappings.Mappings.Mappings[22].Modifiers\" \"Object.Mappings.Mappings.Mappings[22].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[23]\" \"Object.Mappings.Mappings.Mappings[23].Modifiers\" \"Object.Mappings.Mappings.Mappings[23].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[24]\" \"Object.Mappings.Mappings.Mappings[24].Modifiers\" \"Object.Mappings.Mappings.Mappings[24].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[25]\" \"Object.Mappings.Mappings.Mappings[25].Modifiers\" \"Object.Mappings.Mappings.Mappings[25].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[26]\" \"Object.Mappings.Mappings.Mappings[26].Modifiers\" \"Object.Mappings.Mappings.Mappings[26].Modifiers.Modifiers[0]\" "
 CharacterMovementComponent="\"Object.Character Movement: Gravity.GravityDirection\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintNormal\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
 PawnMovementComponent="\"Object.Character Movement: Gravity.GravityDirection\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintNormal\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
@@ -2947,14 +2965,14 @@ HierarchicalLODUtilities.TimeStamp=2024.03.19-20.53.36
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2024.03.19-20.53.39
 TextureEditor.LastCompileMethod=Unknown
-SkeletonEditor.TimeStamp=2024.02.29-23.20.29
-SkeletonEditor.LastCompileMethod=Unknown
-PinnedCommandList.TimeStamp=2024.02.29-23.20.28
-PinnedCommandList.LastCompileMethod=Unknown
-AnimationEditor.TimeStamp=2024.02.29-23.20.22
-AnimationEditor.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2024.02.29-23.20.29
-SequencerWidgets.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2024.03.19-20.53.39
+SkeletonEditor.LastCompileMethod=External
+PinnedCommandList.TimeStamp=2024.03.19-20.53.38
+PinnedCommandList.LastCompileMethod=External
+AnimationEditor.TimeStamp=2024.03.19-20.53.33
+AnimationEditor.LastCompileMethod=External
+SequencerWidgets.TimeStamp=2024.03.19-20.53.38
+SequencerWidgets.LastCompileMethod=External
 DataTableEditor.TimeStamp=2024.02.06-21.10.49
 DataTableEditor.LastCompileMethod=Unknown
 
@@ -2971,7 +2989,6 @@ PreserveScaleRatio=True
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
@@ -3315,6 +3332,8 @@ Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletalMeshEditor",Commands=)
 Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="SkeletonEditor",Commands=)
+Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
